added forecast html and css

--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,22 @@ main {
   font-size: 28px;
 }
 
+.weather-forecast {
+  margin: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 30px 0 0 0;
