--- a/src/style.css
+++ b/src/style.css
@@ -89,18 +89,34 @@ main {
 }
 
 .weather-forecast {
-  margin: 20px;
+  display: flex;
+  margin-top: 20px;
   text-align: center;
 }
 
 .weather-forecast-date {
+  text-align: center;
+  line-height: 20px;
+  margin-bottom: 10px;
   font-size: 16px;
   opacity: 0.5;
+}
+
+.weather-forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 
 .weather-forecast-temperatures {
   font-size: 13px;
 }
+
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
+
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 30px 0 0 0;
