--- a/src/style.css
+++ b/src/style.css
@@ -112,7 +112,7 @@ main {
 .weather-forecast-temperatures {
   font-size: 13px;
   text-align: center;
-  color: #f65282;
+  color: #73dae7;
 
   display: flex;
   justify-content: center;
